# LeapXELA_Hardware_ws

./: .gitattributes  .gitignore  README.md  ROS_STRUCTURE.md  beer_bottle.csv  beer_bottle.txt  contour.txt  data_set_visulizer.py  enclosure.txt  enclosure2.txt  enclosure_pet.txt  flat_hand.txt  hand.urdf  leap_flat.txt  leap_state_output.txt  panda_install.sh  parse_leap_state_to_csv.py  petting.txt  round_fist.txt  run_xela_server_for_can0.sh  run_xela_server_for_can1.sh  run_xela_server_leap.sh  run_xela_server_leap_can1.sh  source_onshape.sh  squeeze.txt  squeeze2.txt  visulize_xela_can0.sh  visulize_xela_can1.sh  visulize_xela_leap.sh  ws_rate_meter.py  xServ.ini
data/: contour_dragon30_1.h5  contour_ecoflex10_1.h5  empty.h5  enc_cocoa_moving.h5  enc_cocoa_still.h5  enc_tennis_fingers.h5  enc_tennis_thumb.h5  enclosurepet_dragon30_1.h5  flat_beerbottle_fast.h5  flat_beerbottle_slow.h5  flat_beerbottle_still.h5  flat_castle_rotating.h5  flat_dragon30_1.h5  flat_dragon30_5.h5  flat_dragon30_6.h5  flat_ecoflex10_2.h5  flat_ecoflex10_3.h5  flat_ecoflex10_5.h5  flat_ecoflex50_1.h5  flat_horse_rotating.h5  flat_plug_rotating.h5  flat_sunglass_rotating.h5  flat_wrench_rotating.h5  pet_dragon30_1.h5  xela_data_20260424_105853.h5  xela_data_20260424_105919.h5  xela_data_20260424_110137.h5
docker/: Dockerfile  build.sh  create_container.sh  find_Xela_sensor_device_name.sh  install_mujoco.sh  mjmodel.xml  remove_container.sh  reset_can.sh  resume_container.sh  resume_container_detached.sh  setup_can.sh  setup_vcan.sh  stop_container.sh
etc_xela/: LEAP.xela  xServ.ini  xServ_can0.ini  xServ_can1.ini  xServ_leap.ini
install/: local_setup.sh  setup.sh
leapXela_pointcloud/: 4_4_sites.json  4_6.xml  4_6_sites.json  add_sites_to_robot.py  attach_fingertip_to_sites.py  attach_sensors_to_sites.py  config.json  find_and_store_sites_for_4_6.py  fingertip.xml  fingertip_magnet_pose.json  produce_json.py  robot.xml  robot_with_fingertips.xml  robot_with_sensors.xml  robot_with_sites.xml
leapXela_with_4_4_markers/: config.json  find_and_store_sites_for_4_4.py  robot.xml
log/: latest_build  latest_test  latest_test-result
mujoco_c_example/: CMakeLists.txt  load_model.cc  load_only.cc  run.sh
mujoco_c_example/mjcf/: leapXela_base_model.xml  scene.xml
mujoco_c_example/mjcf/assets/: leap_hand_xela_bottom.part  outer_skin_collision_6.stl  p4_unified.stl  thfingertip_unified.stl  thp0_unified.part  top_palm.part  uspa46.part
realsene/: hand_with_real_depth_media_pipe.py  realsense_viewer.py
ros_ws/: Guide.txt  MUJOCO_LOG.TXT
ros_ws/src/LEAP_Hand_API/ros2_module/: CMakeLists.txt  leap_globals.py  package.xml  setup.py
ros_ws/src/LEAP_Hand_API/ros2_module/launch/: launch_leap.py  launch_leap_keyboard.py
ros_ws/src/LEAP_Hand_API/ros2_module/scripts/: base.py  contour.csv  controller.py  enclosure.csv  enclosure2.csv  enclosure_pet.csv  flat.csv  flat_hand.csv  keyboard_node.py  leapXela_joint_keyboard_arrows.py  leap_globals.py  leap_state_output.csv  leaphand_node.py  node.py  petting.csv  pose.json  position_node.py  position_node_original.py  ros2_example.py  squeeze.csv
ros_ws/src/LEAP_Hand_API/ros2_module/scripts/leap_hand_utils/: dynamixel_client.py
ros_ws/src/LEAP_Hand_API/ros2_module/scripts/references/: leapXela_keyboard.py  ros2_example.py
ros_ws/src/LEAP_Hand_API/ros2_module/srv/: LeapState.srv
ros_ws/src/arm_server/: CMakeLists.txt  README.md  package.xml
ros_ws/src/arm_server/action/: Execute.action
ros_ws/src/arm_server/launch/: arm_action_server.launch.py
ros_ws/src/arm_server/script/: build_the_wall.py
ros_ws/src/arm_server/src/: arm_action_server.cpp
ros_ws/src/install/xela_data_collection/share/xela_data_collection/: package.ps1  package.sh  package.xml  package.zsh
ros_ws/src/multipanda_ros2/franka_hardware/: CMakeLists.txt  franka_hardware.xml  package.xml
ros_ws/src/multipanda_ros2/franka_hardware/include/franka_hardware/common/: helper_functions.hpp
ros_ws/src/multipanda_ros2/franka_hardware/include/franka_hardware/real/: franka_error_recovery_service_server.hpp  franka_multi_hardware_interface.hpp  franka_param_service_server.hpp  model_franka.hpp  robot.hpp
ros_ws/src/multipanda_ros2/franka_hardware/include/franka_hardware/sim/: franka_mj_hardware_system.hpp  model_sim.hpp  robot_sim.hpp
ros_ws/src/multipanda_ros2/franka_hardware/src/common/: control_mode.cpp  franka_executor.cpp  helper_functions.cpp
ros_ws/src/multipanda_ros2/franka_hardware/src/real/: franka_error_recovery_service_server.cpp  franka_multi_hardware_interface.cpp  franka_param_service_server.cpp  robot.cpp
ros_ws/src/multipanda_ros2/franka_hardware/src/sim/: franka_mj_hardware_system.cpp  gripper_sim_action_server.cpp  robot_sim.cpp
ros_ws/src/xela_models/xela_models/: CMakeLists.txt  package.xml
ros_ws/src/xela_models/xela_models/launch/: display.launch.py  urdf.launch.py
ros_ws/src/xela_models/xela_models/mesh/: 4x6_taxel1.urdf  aftc_taxel1_mujoco.urdf  aftc_taxel1_mujoco.xml  aftf_taxel1_mujoco.urdf
ros_ws/src/xela_models/xela_models/urdf/: aftf_taxel1_mujoco.urdf  generate_4x6_urdf.sh  generate_aftf_for_mujoco.sh  generate_allegro_urdf.sh
ros_ws/src/xela_models/xela_pybullet_viewer/: package.xml  setup.cfg  setup.py
ros_ws/src/xela_point_cloud_representation/: CMakeLists.txt  package.xml
ros_ws/src/xela_point_cloud_representation/include/xela_point_cloud_representation/: camera_control.hpp
ros_ws/src/xela_point_cloud_representation/launch/: Untitled  launch_demo.py  launch_hand_controller.py  launch_hand_touch_point_cloud.py  launch_pc_recorder_only.launch.py  launch_perline_noise_publisher.py  launch_pointcloud_proccessing.py
ros_ws/src/xela_point_cloud_representation/msg/: HandSensors.msg  Sensor.msg  Texel.msg  sensor.msg  texel.msg
ros_ws/src/xela_point_cloud_representation/src/: Guide.txt  camera_control.cc  hand_controller.py  hand_touch_point_cloud.py  leap_sensor_taxel_map.json  leap_taxel_map.py  point_cloud_dump.py  process_hand_sensors_into_pointcloud.cc  sensor_value_publisher.py  sensor_value_publisher_fake.py
(+954 files in other folders)
