<?xml version="1.0"?>
<package format="3">
  <name>xela_models</name>
  <version>1.2.0</version>
  <description>The XELA Sensor Models</description>

  <maintainer email="matthias@xelarobotics.com">Matt</maintainer>
  <license>GPLv3</license>
  <url type="website">http://xelarobotics.com</url>
  <author email="matthias@xelarobotics.com">Matt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Used by launch files / visualization -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
