<?xml version="1.0"?>
<package format="3">
  <name>xela_pybullet_viewer</name>
  <version>0.0.1</version>
  <description>Load XELA xacro into PyBullet and visualize link frames.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xela_models</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Provided by distro/pip depending on system -->
  <exec_depend>python3-pybullet</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
